--- a/samconfig.toml
+++ b/samconfig.toml
@@ -17,8 +17,8 @@ lint = true
 capabilities = "CAPABILITY_IAM"
 confirm_changeset = true
 resolve_s3 = true
-stack_name = "serverless-gpt-api"
-s3_prefix = "serverless-gpt-api"
+stack_name = "servlesgpt-api"
+s3_prefix = "servlesgpt-api"
 region = "us-east-1"
 disable_rollback = true
 image_repositories = []
